--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1250,7 +1250,7 @@ html * {
       color: white;
       text-align: left; }
     .section.pults .container .blocks .block.main {
-      width: 650px;
+      width: 63%;
       font-family: "f_helvetica", "Helvetica", sans-serif;
       font-weight: 300; }
       .section.pults .container .blocks .block.main .main-1 {
@@ -2043,7 +2043,7 @@ html * {
       color: white;
       text-align: left; }
     .section.pults .container .blocks .block.main {
-      width: 650px;
+      width: 63%;
       font-family: "f_helvetica", "Helvetica", sans-serif;
       font-weight: 300; }
       .section.pults .container .blocks .block.main .main-1 {
